force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related account to the storefront</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storefronts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>