force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The address or location data used to map the storefront on the platform and assist in order delivery.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>