force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Average_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Review_Score__c</fullName>
    <formula>Total_Score__c / Total_Reviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Review Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>