force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the storefront, including details like cuisine type or specialty, to enhance the user interface.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>