force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Storefront_Overview__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Overview__c</fullName>
    <description>A brief overview of the storefront, including details like cuisine type or specialty, to enhance the user interface.</description>
    <label>Storefront Overview</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>