force-app/main/default/01_rendererOnly/objects/Storefront__c/fields/Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviews__c</fullName>
    <description>The total number of reviews received by the storefront.</description>
    <label>Total Reviews</label>
    <summaryForeignKey>Review__c.Storefront__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>